<resources>
    <string name="app_name">KaisoApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="crime_title_hint">Enter a title for the crime</string>
    <string name="action_settings">Settings</string>

    <string name="button_new_releases">New Releases</string>
    <string name="button_browse">Browse</string>
    <string name="button_discussions">Discussions</string>
    <string name="button_search">Search</string>
    <string name="button_contact">Contact Kaiso Lovers</string>
    <string name="button_submit">Submit Release Info</string>
    <string name="button_youtube">Video List</string>

    <string name="show_subtitle">Show Release Number</string>
    <string name="hide_subtitle">Hide Release Number</string>
    <string name="subtitle_format">%1$s releases</string>
    <string name="disclaimer">This is a long disclaimer, this is a long disclaimer</string>

    <string name="plus_button">save + new track</string>
    <string name="save_tracks">save tracks</string>

    <string name="submit_button_info">Submit</string>
    <string name="search_submit_button_info">Search</string>
    <string name="search_submit_button_info2">Got Results</string>

    <string name="submit_info_view_text">Submit New Release Info</string>
    <string name="subtitle_search_info">Use one or more search terms</string>
    <string name="search_view_text">Search Archive</string>
    <string name="search">Search Archive</string>
    <string name="artist_name">Artist name</string>
    <string name="release_title">Release title</string>
    <string name="track_title">Track title</string>
    <string name="arranger">Arranger</string>
    <string name="genre">Genre</string>
    <string name="year_of_release">Year of release</string>

    <string name="release_info">RELEASE INFO</string>
    <string name="tracks_text">Tracks</string>
    <string name="comments_text">Comments</string>

    <string name="discussion_title">Discussion Title</string>
    <string name="discussion">Discussion Thread</string>

    <string name="user_title">USER INFO</string>
    <string name="user_name_text">Name</string>
    <string name="user_password_text">Password</string>
    <string name="user_email_text">Email</string>
    <string name="user_phone_text">Cell Phone Number</string>
    <string name="user_email_text_subject">Add Subject</string>
    <string name="user_email_body">Add Message</string>

    <string name="artist_text">Artist</string>
    <string name="title_text">Title</string>
    <string name="year_text">Year</string>
    <string name="arranger_text">Arranger</string>
    <string name="label_text">Label</string>
    <string name="genre_text">Genre</string>
    <string name="track_text">Track</string>

    <string name="comment_text">comment</string>
    <string name="user_text">user</string>
    <string name="date_text">date</string>


    <string name="search_nothing_found">Nothing found</string>

    <string name="new_user">Sign-up</string>
    <string name="initialize">Initialize releases</string>
    <string name="format">Format releases</string>
    <string name="artists_browse_view_text">Browse an artist</string>

    <string name="discussion_recycler_submit">Go</string>
    <string name="no_discussions">Start a discussion</string>

    <string name="duplicate_user">User already exists</string>

    <string name="submit_disc_btn">Submit</string>

    <string name="discussion_point_hint">Enter a comment</string>
    <string name="discussion_point1">Enter a comment</string>
    <string name="discussion_point2">Continue discussion</string>

    <string name="new_discussion">New Discussion</string>

    <string name="error_blank_title"> empty title </string>
    <string name="error_blank_discussion_point"> empty comment </string>
    <string name="error_join"> and </string>

    <string name="error_blank_input">Use at least one search term</string>
    <string name="error_blank_comment_input">blank comment</string>
    <string name="error_blank_artist">blank artist</string>

    <string name="error_blank_name">blank name</string>
    <string name="error_blank_email">blank email</string>
    <string name="error_blank_password">blank password</string>
    <string name="error_blank_label">blank label</string>
    <string name="error_blank_year">blank year</string>
    <string name="error_blank_track">blank track</string>
    <string name="error_blank_arranger">blank arranger</string>
    <string name="error_blank_genre">blank genre</string>

    <string name="add_comment">Add comment</string>
    <string name="add_comment_edit_text">Add comment</string>

    <string name="submit_comment_button">submit comment</string>

    <string name="error_thumbnail_view">There was an error initializing the YouTubeThumbnailView (%1$s)</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>

</resources>
