<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#ffccff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/user_title"
        android:id="@+id/user_title"
        android:textAlignment="center"
        android:padding="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name_text"
        android:id="@+id/user_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:padding="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_email_text"
        android:id="@+id/user_email"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:padding="20dp"/>


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/user_email_text_subject"
        android:id="@+id/user_email_subject"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:padding="20dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/user_email_body"
        android:id="@+id/user_email_body"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:padding="20dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Send message"
        android:id="@+id/send_message_button"
        android:singleLine="true"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>