<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="15dp"
              android:background="#eeeeee">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/release_info"
        android:id="@+id/release_text"
        android:layout_gravity="bottom"
        android:paddingBottom="20dp"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artist_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/artist_text"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/year_text"
            android:gravity="right"
            android:paddingRight="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/release_title"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arranger_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/arranger_text"
            android:gravity="right"
            android:paddingRight="20dp"/>

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre_text"
        android:id="@+id/genre_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/label_text"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tracks_text"
        android:textStyle="italic"/>

    <ListView
        android:id="@+id/list"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
    </ListView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/comments_text"
        android:textStyle="italic"/>

    <ListView
        android:id="@+id/list_comment"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
    </ListView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/add_comment"
        />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/add_comment_edit_text"

            android:hint="add comment"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_comment_button"
            android:id="@+id/button_add_comment"
            />
    </LinearLayout>



</LinearLayout>