<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comment_text"
        android:id="@+id/comment_text_view"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_text"
        android:id="@+id/user_text_view"
        android:layout_below="@+id/comment_text_view"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="italic"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_text"
        android:id="@+id/date_text_view"
        android:layout_below="@+id/comment_text_view"
        android:layout_toRightOf="@+id/user_text_view"
        android:textStyle="italic"/>
</RelativeLayout>