<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#eeeeee">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/start_discussion_view">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"

            android:layout_gravity="left"
            android:id="@+id/discussion_title1"
            android:hint="@string/discussion_title"
            android:padding="16dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/discussion_point1"
            android:hint="@string/discussion_point1"
            android:padding="16dp"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_disc_btn"
            android:id="@+id/submit_disc_btn"
            android:layout_gravity="right"
            android:padding="16dp"
            android:enabled="true"/>


    </LinearLayout>

</LinearLayout>